# Agentic-AI-Solution

agentic-incident-response/: .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml
agentic-incident-response/app/: __init__.py  cli.py
agentic-incident-response/app/agents/: __init__.py  investigator.py  runbooks.py
agentic-incident-response/app/api/: main.py
agentic-incident-response/app/core/: pipeline.py
agentic-incident-response/app/detection/: __init__.py  statistical.py
agentic-incident-response/app/ingestion/: __init__.py  log_parser.py
agentic-incident-response/app/schemas/: models.py
agentic-incident-response/data/sample_logs/: auth_incident.jsonl  payment_incident.jsonl
agentic-incident-response/tests/: test_pipeline.py
docs/: MGT-AI-Solution-Overview.pptx
scripts/: build_presentation.py
