[project]
name = "agentic-incident-response"
version = "0.1.0"
description = "Agentic AI incident response platform with anomaly detection, investigation agents, and postmortem generation."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ai = [
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "torch>=2.3.0",
]
dev = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
